--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
       host: 127.0.0.1
       port: 6379
 
+scheduler:
+  enabled: true
+
 ---
 spring:
   config:
@@ -17,3 +20,6 @@ spring:
     redis:
       host: 127.0.0.1
       port: 63790
+
+scheduler:
+  enabled: false
